// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`io_ts.fromEnum 0 1`] = `
Type {
  "decode": [Function],
  "encode": [Function],
  "is": [Function],
  "name": "Anas",
  "validate": [Function],
}
`;

exports[`io_ts.fromEnum 1 1`] = `
Type {
  "decode": [Function],
  "encode": [Function],
  "is": [Function],
  "name": "George",
  "validate": [Function],
}
`;

exports[`io_ts.fromEnum 2 1`] = `
Type {
  "decode": [Function],
  "encode": [Function],
  "is": [Function],
  "name": "Anas",
  "validate": [Function],
}
`;

exports[`io_ts.fromEnum 3 1`] = `
Type {
  "decode": [Function],
  "encode": [Function],
  "is": [Function],
  "name": "Michael",
  "validate": [Function],
}
`;

exports[`io_ts.fromEnum 4 1`] = `
Type {
  "decode": [Function],
  "encode": [Function],
  "is": [Function],
  "name": "Edmond",
  "validate": [Function],
}
`;

exports[`io_ts.fromEnum 5 1`] = `
Type {
  "decode": [Function],
  "encode": [Function],
  "is": [Function],
  "name": "",
  "validate": [Function],
}
`;
